vlib/v/checker/tests/for_in_empty_range_err.vv
fn main() {
    for i in 4 .. 2 {
        println(i)
    }
}